root must not start with a slash

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -27,7 +27,7 @@ web:
       allow: false
       passthru: true
     /static:
-      root: /static
+      root: static
       passthru: false
 
 # The hooks executed at various points in the lifecycle of the application.
